Install the include files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ add_definitions(${PCL_DEFINITIONS})
 
 include_directories(${PROJECT_SOURCE_DIR}/include)
 
+# create the CPUTSDF library
 add_library (cpu_tsdf SHARED
               src/lib/octree.cpp
               src/lib/tsdf_volume_octree.cpp
@@ -43,14 +44,33 @@ add_library (cpu_tsdf SHARED
             target_link_libraries (cpu_tsdf ${PCL_LIBRARIES})
 install(TARGETS cpu_tsdf DESTINATION lib${LIB_SUFFIX})
 
+# Create the executables
 add_executable (tsdf2mesh src/prog/tsdf2mesh.cpp)
 target_link_libraries(tsdf2mesh ${PCL_LIBRARIES} cpu_tsdf)
 install(TARGETS tsdf2mesh DESTINATION bin)
-configure_file (${PROJECT_SOURCE_DIR}/CPUTSDFConfig.cmake.in ${CMAKE_CURRENT_BINARY_DIR}/CPUTSDFConfig.cmake)
-install(FILES ${CMAKE_CURRENT_BINARY_DIR}/CPUTSDFConfig.cmake DESTINATION share)
 
 add_executable (integrate src/prog/integrate.cpp)
 target_link_libraries(integrate ${PCL_LIBRARIES} cpu_tsdf boost_program_options)
 install(TARGETS integrate DESTINATION bin)
+
+# Install the Header files preserving the directory
+set(HEADER_FILES include/cpu_tsdf/impl/tsdf_volume_octree.hpp
+		 include/cpu_tsdf/marching_cubes_tsdf_octree.h
+		 include/cpu_tsdf/octree.h
+		 include/cpu_tsdf/tsdf_interface.h
+		 include/cpu_tsdf/tsdf_volume_octree.h
+		 include/eigen_extensions/eigen_extensions.h
+)
+
+FOREACH(HEADER ${HEADER_FILES})
+	STRING(REGEX MATCH "(.*)[/]" DIR ${HEADER})
+	INSTALL(FILES ${HEADER} DESTINATION ${DIR})
+ENDFOREACH(HEADER)
+
+# Install CPUTSDF cmake config file for FIND_PACKAGE()
+configure_file (${PROJECT_SOURCE_DIR}/CPUTSDFConfig.cmake.in ${CMAKE_CURRENT_BINARY_DIR}/CPUTSDFConfig.cmake)
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/CPUTSDFConfig.cmake DESTINATION share)
+
+
 
 
