Fix some bugs in the cmake, now it can be find with find_package()

--- a/CPUTSDFConfig.cmake.in
+++ b/CPUTSDFConfig.cmake.in
@@ -6,14 +6,14 @@
 #  INTEGRATE_CPUTSDF_EXECUTABLE   - the integrate executable
 
 # Find and Set the library
-FIND_LIBRARY(CPUTSDF_LIBRARY libcpu_tsdf
+FIND_LIBRARY(CPUTSDF_LIBRARY cpu_tsdf
     PATHS @CMAKE_INSTALL_PREFIX@/lib
     NO_DEFAULT_PATH
 )
 SET(CPUTSDF_LIBRARIES ${CPUTSDF_LIBRARY})
 
 # Find and set the include dirs
-SET(CPUTSDF_INCLUDE_DIRS "@CMAKE_INSTALL_PREFIX@/include/cpu_tsdf")
+SET(CPUTSDF_INCLUDE_DIR "@CMAKE_INSTALL_PREFIX@/include/cpu_tsdf")
 
 SET(CPUTSDF_INCLUDE_DIRS ${CPUTSDF_INCLUDE_DIR})
 
