set correct inlcud dir

--- a/CPUTSDFConfig.cmake.in
+++ b/CPUTSDFConfig.cmake.in
@@ -13,7 +13,7 @@ FIND_LIBRARY(CPUTSDF_LIBRARY cpu_tsdf
 SET(CPUTSDF_LIBRARIES ${CPUTSDF_LIBRARY})
 
 # Find and set the include dirs
-SET(CPUTSDF_INCLUDE_DIR "@CMAKE_INSTALL_PREFIX@/include/cpu_tsdf")
+SET(CPUTSDF_INCLUDE_DIR "@CMAKE_INSTALL_PREFIX@/include")
 
 SET(CPUTSDF_INCLUDE_DIRS ${CPUTSDF_INCLUDE_DIR})
 
